# null-widget

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
.notes/: null-widgets-explained-(mostly).md
.notes/archive/: old.cpp
include/: ClockWidget.hpp  ContextMenu.hpp  Fonts.hpp
resources/: resource.rc
src/: ClockWidget.cpp  Win.cpp
src/utils/: Fonts.cpp
src/window/: ClockWidget.cpp  ContextMenu.cpp
